# DataProcessingFramework

./: pyproject.toml  requirements.txt
data_processing_framework/config/: enums.py
data_processing_framework/conformance/: __init__.py  conformance.py  conformance_factory.py
data_processing_framework/core/: __init__.py  base_pipeline.py  file_pipeline.py  pipeline_factory.py  query_pipeline.py
data_processing_framework/file_io/client/: __init__.py  hdfs_client-local.py
data_processing_framework/merge/: __init__.py  custom_strategy.py
data_processing_framework/read/: __init__.py  reader.py
data_processing_framework/tracking/: __init__.py  file_processing_tracker.py
data_processing_framework/transformation/: custom_base.py
data_processing_framework/write/: __init__.py
examples/: cliente.py  config_templates.py  teste_clientes.py
src/data_processing_framework/config/: __init__.py  enums.py  pipeline_config.py
src/data_processing_framework/conformance/: __init__.py  conformance_factory.py  conformance_strategies.py
src/data_processing_framework/core/: file_pipeline.py  pipeline_factory.py  query_pipeline.py
src/data_processing_framework/file_io/: __init__.py  file_io_interface.py
src/data_processing_framework/merge/: base_strategy.py  default_strategy.py
src/data_processing_framework/pipeline/: __init__.py  pipeline_factory.py
src/data_processing_framework/read/: reader.py
src/data_processing_framework/tracking/: file_processing_tracker.py
src/data_processing_framework/transformation/: __init__.py  builtin.py  custom_base.py  registry.py
(+25 files in other folders)
