[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-processing-framework"
version = "0.1.0"
description = "Framework para processamento de dados em Lakehouse"
readme = "README.md"
authors = [
    { name = "Leonardo Tofanelli", email = "leonardotofanelli123@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

# Dependências obrigatórias
dependencies = [
    "delta-spark>=2.3.0",
    "pandas>=2.3.2",
    "pyspark>=3.3.0",
    "requests>=2.32.5",
    "msal>=1.33.0",
    "pyarrow>=21.0.0",
    "paramiko>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_processing_framework*"]
